--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,15 @@
 	width: 30%;
 	padding: 0 20px 0 20px;
 }
+
 .file-image {
 	width: 100%;
+	transition: filter 200ms ease;
 }
+.tanned-img {
+	filter: blur(2px) brightness(0.4);
+}
+
 .scale-range {
 	width: 70%;
 }
