--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,29 @@
 	background-color: rgba(232, 197, 56, 0.3);
 }
 
+.download-image {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: default;
+	text-decoration: none;
+	width: 90%;
+	height: 90%;
+	background-color: rgba(232, 197, 56, 0.2);
+	border: 2px solid rgb(232, 197, 56);
+	border-radius: 10px;
+	color: #b5962f;
+	opacity: 0;
+	transition: all 250ms ease-in-out;
+}
+.download-image:hover {
+	background-color: rgba(232, 197, 56, 0.3);
+}
+
 .convert-btn {
 	height: 40px;
 	width: 100%;
@@ -102,6 +125,7 @@
 	opacity: 0;
 }
 .label-with-image:hover {
+	cursor: pointer;
 	opacity: 1;
 }
 .scale-range {
