--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	top: calc(50% - 25px);
 	left: calc(50% - 25px);
-	transform: translate(-50%, -50%);
+	transform: translate(calc(-50% + 25px), calc(-50% + 25px));
 	animation: rotate 1s infinite;
 	height: 50px;
 	width: 50px;
